# wages_trucking_industry

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/haulage/: __init__.py  _logging.py  assumptions.py  estimands.py  influence.py
src/haulage/data/: __init__.py  cache.py  freeze.py  panel.py
src/haulage/data/sources/: __init__.py  bls_ces.py  bls_oes.py  bts.py  cbp.py  fars.py  fhwa.py  fmcsa.py  fred.py  ipums.py
src/haulage/data/static/: __init__.py  icc_route_authorities_1978.py  state_dereg_dates.py  teamsters_density.py
src/haulage/estimators/: __init__.py  base.py  did_bacon.py  did_cs.py  did_twfe.py  ols.py
src/haulage/inference/: __init__.py  cluster.py  driscoll_kraay.py  hac.py  sandwich.py  wild_bootstrap.py
src/haulage/utils/: __init__.py  formula.py  linalg.py  validation.py
tests/: conftest.py  test_data_pipeline.py  test_did_bacon.py  test_did_cs.py  test_did_twfe.py  test_influence_orthogonality.py  test_ols.py
