[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haulage"
version = "0.1.0"
description = "Reproducible re-examination of the causal effect of trucking deregulation on wages, hours, and employment with modern semiparametric tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "haulage contributors" }]
keywords = ["causal-inference", "econometrics", "difference-in-differences", "trucking", "deregulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "fredapi>=0.5",
    "requests>=2.31",
    "joblib>=1.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "streamlit-agraph>=0.0.45"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.urls]
Homepage = "https://github.com/patrykwek/wages_trucking_industry"
Issues = "https://github.com/patrykwek/wages_trucking_industry/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haulage = ["data/static/*.csv", "data/static/*.json", "py.typed"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913", "PLR0912", "PLR0915", "PLR2004", "PLR0911",
    "PLC0415", "PLW0603",
    "N803", "N806", "E741",
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "N802", "B905", "RUF059"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
files = ["src/haulage"]

[[tool.mypy.overrides]]
module = [
    "fredapi.*", "statsmodels.*", "sklearn.*", "matplotlib.*", "scipy.*",
    "joblib.*", "pandas.*", "pandas", "requests.*", "requests",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=haulage --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "live_data: tests that hit live APIs and require credentials",
    "replication: published-result replications",
]

[tool.coverage.run]
branch = true
source = ["haulage"]
omit = ["*/tests/*", "*/analyses/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
